Build out of command pattern and added code highlighting

--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
     "ordersectionsby": "weight",
     "editURL": false
   },
+  "pygmentsCodeFences": true,
   "taxonomies": {
     "tag": "tags",
     "category": "categories",
