exploring environment variables

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,5 +26,5 @@ phases:
       - hugo --buildDrafts -v
   post_build:
     commands:
-      - echo ... post-build ...
+      - printenv
       - aws s3 sync public/ s3://iotatlas.net --cache-control max-age=3600 --delete
