--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,5 +26,5 @@ phases:
       - hugo --buildDrafts -v
   post_build:
     commands:
-      - echo $CF_DISTRO
-      - aws s3 sync public/ s3://iotatlas.net --cache-control max-age=3600 --delete
+      - aws s3 sync public/ s3://iotatlas.net --cache-control max-age=43200 --delete
+      - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths /\*
