updated editURL for en-us language, Fixes #12

--- a/config.json
+++ b/config.json
@@ -26,7 +26,10 @@
       "langCode": "en-us",
       "contentDir": "content/en-us",
       "languageName": "English",
-      "weight": 1
+      "weight": 1,
+      "params": {
+        "editURL": "https://github.com/aws/iot-atlas/tree/master/content/en-us/"
+      }
     }
   }
 }
