--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -47,10 +47,8 @@ jobs:
       - name: Content has successfully PASSED validation
         if: ${{ success() }}
         uses: actions/github-script@v3
-        env:
-          PAT: ${{ secrets.IOT_ATLAS_CI_PAT }}
         with:
-          github-token: ${{ env.PAT }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.issues.createComment({
               issue_number: context.issue.number,
@@ -62,7 +60,7 @@ jobs:
         if: ${{ failure() }}
         uses: actions/github-script@v3
         with:
-          github-token: ${{ secrets.IOT_ATLAS_CI_PAT }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.issues.createComment({
               issue_number: context.issue.number,
