--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -41,6 +41,8 @@ jobs:
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+      - name: Run forked code test
+        run: echo "this should not run from a forked PR request"
       - name: Validate Hugo content, internal, and external web links
         run: ./make_hugo.sh -v
         working-directory: ${{env.working-directory}}
