baseurl change for index test

--- a/src/hugo/config.toml
+++ b/src/hugo/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://iotatlas.net"
+baseURL = "https://iotatlas.net"
 title = "IoT Atlas"
 theme = "iot-atlas"
 pygmentsCodeFences = true
