--- a/src/Dockerfile-build
+++ b/src/Dockerfile-build
@@ -1,11 +1,9 @@
-FROM public.ecr.aws/ubuntu/ubuntu:20.04_stable
-
+# Version of Hugo to build.
+# NOTE: For now, version 0.82.0 needed until hard-coded files for PlantUML addressed
 ARG HUGO_VERSION=0.82.0
 
-ENV DOCUMENT_DIR=/hugo-project
-ENV PATH="${PATH}:/usr/local/go/bin"
-
-# python-minimal for pygments support for asciidoctor
+FROM public.ecr.aws/ubuntu/ubuntu:20.04_stable AS base
+# All apt-get packages needed for all stages - TODO change if layer cannot be reused
 RUN apt-get update && apt-get upgrade -y \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     curl ruby ruby-dev make cmake build-essential bison flex graphviz \
@@ -13,22 +11,36 @@ RUN apt-get update && apt-get upgrade -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# Install golang
-RUN cd /tmp \
-    && curl -JLO https://golang.org/dl/go1.16.3.linux-amd64.tar.gz \
-    && rm -rf /usr/local/go && tar -C /usr/local -xzf go1.16.3.linux-amd64.tar.gz
 
-# Download Hugo source, compile, install
-RUN cd /tmp && curl -JLO https://github.com/gohugoio/hugo/archive/refs/tags/v${HUGO_VERSION}.tar.gz \
-    && tar xzf hugo-${HUGO_VERSION}.tar.gz \
-    && cd hugo-${HUGO_VERSION} \
-    && go get github.com/OhYee/goldmark-plantuml@v1.0.3
+# Build hugo executable using golang
+FROM base AS builder
+ARG HUGO_VERSION
+ENV PATH="${PATH}:/usr/local/go/bin"
+WORKDIR /tmp
+# Install golang
+RUN curl -JLO https://golang.org/dl/go1.16.3.linux-amd64.tar.gz \
+    && rm -rf /usr/local/go && tar -C /usr/local -xzf go1.16.3.linux-amd64.tar.gz \
+    && rm /tmp/go1.16.3.linux-amd64.tar.gz
+
+### Download Hugo source, compile, install
+# Prepare source file changes
 # Hard-coded files for now, specific to Hugo 0.82.0
-COPY ./docker_assets/convert.go /tmp/hugo-${HUGO_VERSION}/markup/goldmark/convert.go
-COPY ./docker_assets/config.go /tmp/hugo-${HUGO_VERSION}/markup/goldmark/goldmark_config/config.go
-RUN cd /tmp/hugo-${HUGO_VERSION} \
+COPY ./docker_assets/convert.go /tmp/convert.go
+COPY ./docker_assets/config.go /tmp/config.go
+RUN curl -JLO https://github.com/gohugoio/hugo/archive/refs/tags/v${HUGO_VERSION}.tar.gz \
+    && tar xzf hugo-${HUGO_VERSION}.tar.gz \
+    && cp /tmp/convert.go /tmp/hugo-${HUGO_VERSION}/markup/goldmark/convert.go \
+    && cp config.go /tmp/hugo-${HUGO_VERSION}/markup/goldmark/goldmark_config/config.go \
+    && cd hugo-${HUGO_VERSION} \
+    && go get github.com/OhYee/goldmark-plantuml@v1.0.3 \
     && go install --tags extended \
-    && mv $HOME/go/bin/hugo /usr/local/bin
+    && mv $HOME/go/bin/hugo /hugo \
+    && rm -rf /tmp/*
+
+# Build the operational container
+FROM base
+ENV DOCUMENT_DIR=/hugo-project
+COPY --from=builder /hugo /usr/local/bin
 
 # Install plantuml
 RUN mkdir -p /opt/plantuml && cd /opt/plantuml \
@@ -41,9 +53,6 @@ RUN chmod a+x /usr/local/bin/plantuml
 RUN gem install --no-document asciidoctor asciidoctor-revealjs asciidoctor-html5s \
     rouge asciidoctor-confluence asciidoctor-diagram coderay pygments.rb
 
-# Clean up image
-RUN rm -rf /tmp/*
-
 
 RUN mkdir ${DOCUMENT_DIR}
 WORKDIR ${DOCUMENT_DIR}
@@ -54,5 +63,5 @@ ENV PATH=${DOCUMENT_DIR}:$PATH
 CMD ["hugo","server","--bind","0.0.0.0"]
 
 HEALTHCHECK --interval=2s --timeout=3s \
-  CMD curl -f http://localhost:1313/ || exit 1
+    CMD curl -f http://localhost:1313/ || exit 1
 
