--- a/src/hugo/config.toml
+++ b/src/hugo/config.toml
@@ -34,7 +34,7 @@ home = [ "HTML", "RSS", "JSON" ]
 
 [[menu.shortcuts]]
 name = "<i class='fas fa-tags'></i> Tags"
-url = "/tags"
+url = "/tags/"
 weight = 30
 
 [languages]
