--- a/src/Dockerfile-build
+++ b/src/Dockerfile-build
@@ -19,8 +19,7 @@ WORKDIR /tmp
 # Install golang and disable proxy
 RUN curl -JLO https://golang.org/dl/go1.16.3.linux-amd64.tar.gz \
     && rm -rf /usr/local/go && tar -C /usr/local -xzf go1.16.3.linux-amd64.tar.gz \
-    && rm /tmp/go1.16.3.linux-amd64.tar.gz \
-    && go env -w GOPROXY=direct
+    && rm /tmp/go1.16.3.linux-amd64.tar.gz
 
 ### Download Hugo source, compile, install
 # Prepare source file changes
@@ -32,6 +31,7 @@ RUN curl -JLO https://github.com/gohugoio/hugo/archive/refs/tags/v${HUGO_VERSION
     && cp /tmp/convert.go /tmp/hugo-${HUGO_VERSION}/markup/goldmark/convert.go \
     && cp config.go /tmp/hugo-${HUGO_VERSION}/markup/goldmark/goldmark_config/config.go \
     && cd hugo-${HUGO_VERSION} \
+    && go env -w GOPROXY=direct \
     && go get github.com/OhYee/goldmark-plantuml@v1.0.3 \
     && go install --tags extended \
     && mv $HOME/go/bin/hugo /hugo \
