--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,8 +2,9 @@
 # NOTE: For now, version 0.82.0 needed until hard-coded files for PlantUML addressed
 ARG HUGO_VERSION=0.82.0
 
+################################################################################
 FROM public.ecr.aws/ubuntu/ubuntu:20.04_stable AS base
-# All apt-get packages needed for all stages - TODO change if layer cannot be reused
+
 RUN apt-get update && apt-get upgrade -y \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     curl ruby ruby-dev make cmake build-essential bison flex graphviz \
@@ -11,32 +12,43 @@ RUN apt-get update && apt-get upgrade -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+################################################################################
 # Build hugo executable using golang
 FROM base AS builder
+
+# Version of golang to build.
+ARG GO_VERSION=1.16.3
+
 ARG HUGO_VERSION
+
 ENV PATH="${PATH}:/usr/local/go/bin"
 WORKDIR /tmp
-# Install golang and disable proxy
-RUN curl -JLO https://golang.org/dl/go1.16.3.linux-amd64.tar.gz \
-    && rm -rf /usr/local/go && tar -C /usr/local -xzf go1.16.3.linux-amd64.tar.gz \
-    && rm /tmp/go1.16.3.linux-amd64.tar.gz
 
-### Download Hugo source, compile, install
+# Install golang
+RUN curl -JLO https://golang.org/dl/go${GO_VERSION}.linux-amd64.tar.gz \
+    && rm -rf /usr/local/go \
+    && tar -C /usr/local -xzf go${GO_VERSION}.linux-amd64.tar.gz
+
+# Configure GOPROXY if passed in as build argument
+ARG GOPROXY
+RUN test -n "$GOPROXY" && go env -w GOPROXY=${GOPROXY}
+
+# Download Hugo source
+RUN curl -JLO https://github.com/gohugoio/hugo/archive/refs/tags/v${HUGO_VERSION}.tar.gz \
+    && tar xzf hugo-${HUGO_VERSION}.tar.gz
+
 # Prepare source file changes
 # Hard-coded files for now, specific to Hugo 0.82.0
-COPY ./docker_assets/convert.go /tmp/convert.go
-COPY ./docker_assets/config.go /tmp/config.go
-RUN curl -JLO https://github.com/gohugoio/hugo/archive/refs/tags/v${HUGO_VERSION}.tar.gz \
-    && tar xzf hugo-${HUGO_VERSION}.tar.gz \
-    && cp /tmp/convert.go /tmp/hugo-${HUGO_VERSION}/markup/goldmark/convert.go \
-    && cp config.go /tmp/hugo-${HUGO_VERSION}/markup/goldmark/goldmark_config/config.go \
-    && cd hugo-${HUGO_VERSION} \
-    && go env -w GOPROXY=direct \
+COPY ./docker_assets/convert.go /tmp/hugo-${HUGO_VERSION}/markup/goldmark/convert.go
+COPY ./docker_assets/config.go /tmp/hugo-${HUGO_VERSION}/markup/goldmark/goldmark_config/config.go
+
+# Download dependencies and compile Hugo
+RUN cd hugo-${HUGO_VERSION} \
     && go get github.com/OhYee/goldmark-plantuml@v1.0.3 \
     && go install --tags extended \
-    && mv $HOME/go/bin/hugo /hugo \
-    && rm -rf /tmp/*
+    && mv $HOME/go/bin/hugo /hugo
 
+################################################################################
 # Build the operational container
 FROM base
 ENV DOCUMENT_DIR=/hugo-project
@@ -53,15 +65,13 @@ RUN chmod a+x /usr/local/bin/plantuml
 RUN gem install --no-document asciidoctor asciidoctor-revealjs asciidoctor-html5s \
     rouge asciidoctor-confluence asciidoctor-diagram coderay pygments.rb
 
-
 RUN mkdir ${DOCUMENT_DIR}
 WORKDIR ${DOCUMENT_DIR}
 
 VOLUME ${DOCUMENT_DIR}
 ENV CLASSPATH=/opt/plantuml
 ENV PATH=${DOCUMENT_DIR}:$PATH
-CMD ["hugo","server","--bind","0.0.0.0"]
+CMD ["hugo", "server", "--bind", "0.0.0.0"]
 
 HEALTHCHECK --interval=2s --timeout=3s \
     CMD curl -f http://localhost:1313/ || exit 1
-
