--- a/.github/workflows/receive_pr.yml
+++ b/.github/workflows/receive_pr.yml
@@ -19,14 +19,14 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile-build') }}
+          key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile') }}
           restore-keys: |
             ${{ runner.os }}-buildx-
       - name: Build Hugo container image
         uses: docker/build-push-action@v2
         with:
           context: ./src
-          file: ./src/Dockerfile-build
+          file: ./src/Dockerfile
           # Do not push to remote registry
           push: false
           # Load as a local image
