debug: docker build

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -8,6 +8,8 @@ FROM public.ecr.aws/ubuntu/ubuntu:20.04_stable AS base
 ARG TARGETARCH
 ARG BUILDARCH
 
+RUN echo "TARGETARCH=${TARGETARCH}\BUILDARCH=${BUILDARCH}"
+
 RUN [ ${TARGETARCH} = ${BUILDARCH} ] || { echo "Error: the target architecture is not the same as the build architecture"; exit 1; }
 
 RUN apt-get update && apt-get upgrade -y \
